syntax = "proto3";

message EthTransaction {
	uint32 version = 1;
	string data = 2;
}

message EthCall {
	uint32 version = 1;
	string data = 2;
}

message EthCallResult {
	uint32 version = 1;
	string data = 2;
}
